--- a/css/styles.css
+++ b/css/styles.css
@@ -182,6 +182,7 @@ address {
     url(../images/hero-bg.jpg);
   background-position: center;
   background-size: cover;
+  background-repeat: no-repeat;
 }
 .main-title {
   font-size: 44px;
@@ -411,6 +412,7 @@ address {
   gap: 30px;
 }
 .container-bg {
+  display: block;
   box-sizing: border-box;
 }
 .container-bg:hover,
@@ -478,6 +480,7 @@ gap: 70px;
   letter-spacing: 0.03em;
   color: var(--color-btn);
   margin-bottom: 20px;
+  text-transform: uppercase;
 }
 
 .socials-footer {
